--- a/Pedro/Index.html
+++ b/Pedro/Index.html
@@ -18,7 +18,74 @@
             <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
             <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a>
             <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos</p>
-            </div>
+        </div>
     </section>
+    <section class="container secundario">
+        <img src="img/Plataformas.png" alt="Um monitor e um celular com o Alura+ aberto" class="secundario__imagem">
+        <div class="container__descricao">
+            <h2 class="descricao__titulo">Assista do seu jeito</h2>
+            <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular 
+                                        e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
+        </div>
+    </section>
+        <section class="container secundario">
+            <div class="container__descricao">
+                <p class="descricao__texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
+                <a href="www.alura.com.br" class="container__botao secundario__botao">Assinar o Alura+</a>
+            </div>
+            <img src="img/Telas.png" alt="Tela da Alura+ e do Alura Língua" class="secundario__imagem">
+    </section>
+    <section class="container secundario">
+        <img src="img/Notebook.png" alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta" class="secundario__imagem">
+        <div class="container__descricao">
+            <h2 class="descricao__titulo">Baixe seus cursos</h2>
+            <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
+        </div>
+    </section>
+    <section class="dispositivos">
+            <h2 class="dispositivo__titulo">Disponível nos seus dispositivos favoritos</h2>
+            <ul class="dispositivos__lista">
+                <li>
+                    <img src="img/tv.png" alt="íncone de televisão">
+                    <h3 class="lista__itens">TV</h3>
+                </li>
+                <li>
+                    <img src="img/computador.png" alt="íncone de computador">
+                    <h3 class="lista__itens">Computadores</h3>
+                </li>
+                <li>
+                    <img src="img/celular.png" alt="íncone de celular">
+                    <h3 class="lista__itens">Celulares e táblets</h3>
+                </li>
+            </ul>
+    </section>
+    <footer class="rodape">
+        <img src="img/Logo.png" alt="Alura+" class="rodape__logo">
+        <ul class="rodape__lista">
+            <li class="lista__link">
+                <a href="www.alura.com.br">Idioma</a>
+            </li>
+            <li class="lista__link">
+                <a href="www.alura.com.br">Dispositivos compatíveis</a>
+            </li>
+            <li class="lista__link">
+                <a href="www.alura.com.br">contato de assinatura</a>
+            </li>
+            <li class="lista__link">
+                <a href="www.alura.com.br">Política de privacidade</a>
+            </li>
+            <li class="lista__link">
+                <a href="www.alura.com.br">Proteção de dados no Brazil</a>
+            </li>
+            <li class="lista__link">
+                <a href="www.alura.com.br">Alúncios personalizados</a>
+            </li>
+            <li class="lista__link">
+                <a href="www.alura.com.br">Ajuda</a>
+            </li>
+        </ul>
+        <p class="rodape__texto">® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.</p>
+        <p class="rodape__texto">Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
+    </footer>
 </body>
 </html>
